# sparse_c_frontend

./: CMakeLists.txt  README.md
docs/: Doxyfile.in
lib/: eigen.tar.bz2
lib/chill/omega/code_gen/src/: CG_utils.cc
lib/chill/omega/parser/: AST.cc  lex.yy.cc
lib/eigen/unsupported/Eigen/CXX11/: CMakeCache.txt  Makefile
lib/iegenlib/src/parser/: gen_parser.hh.bak  gen_scanner.cc.bak
lib/isl/include/isl/: stdint.h
lib/pdfg-ir/: CMakeLists.txt  README.md
lib/pdfg-ir/data/matrix/: m1.mtx  m2.mtx
lib/pdfg-ir/data/tensor/: hicoo.tns  matmul_5-5-5.tns  matmul_5-5-5_r10_lambda.mat  matmul_5-5-5_r10_mode1.mat  matmul_5-5-5_r10_mode2.mat  matmul_5-5-5_r10_mode3.mat
lib/pdfg-ir/doc/: debug.txt  minifluxdiv-notes.txt  notes.txt
lib/pdfg-ir/examples/isl/: csr-spmv-md.st  csr-spmv.st  isolate.st  jacobi-shift.in  jacobi-shift.st  jacobi-unroll.in  jacobi-unroll.st  jacobi.st  tiling.st  wavefront.st
lib/pdfg-ir/examples/omega/: insp-bsr.in  insp-rp.in  omega-test.in
lib/pdfg-ir/examples/pdfg/: conjgrad.json  cp_als.json  csr-to-bcsr.json  csr_spmv.gsl  csr_spmv.json  jacobi.gsl  jacobi1d.json  mfd_2d.gsl  mfd_3d.gsl  miniFluxDiv-seriesSSACLO.json  sddm.json  seriesSSACLO.json  sgemm.json
lib/pdfg-ir/lib/chill/omega/code_gen/src/: codegen.cc
lib/pdfg-ir/lib/chill/omega/parser/: parser.ll  parser.tab.cc  parser.yy
lib/pdfg-ir/lib/eigen/unsupported/Eigen/: SparseExtra
lib/pdfg-ir/lib/eigen/unsupported/Eigen/CXX11/: cmake_install.cmake
lib/pdfg-ir/lib/iegenlib/src/parser/: gen_parser.cc.bak
lib/pdfg-ir/lib/isl/: isl_config.h
lib/pdfg-ir/scripts/: chartgen.ipynb  chartgen.py  graph2isl.py  graphs.ipynb  iegen_test.py  iegen_to_omega.py  iegenlib.ipynb  iscc.ipynb  islcodegen.ipynb  islcodegen.py  islextract.py  llvm_test.py  mfd-graph-dot.py  mfd.ipynb  omega.ipynb  pdfgcomp.py  perfmodel.py  seaborn.ipynb  z3.ipynb
lib/pdfg-ir/scripts/codegen/: ast.py  cpp.py  factory.py  helpers.py  iegenlib.py  schedtree.py  setlib.py  settings.py  visit.py
lib/pdfg-ir/scripts/iegenlib/: build.sh  iegenlib_pybind.cpp  setup.py
lib/pdfg-ir/scripts/pdfg/: graph.py  pdfgs.py
lib/pdfg-ir/scripts/sde/: hockney-sde.sh  parse-sde.sh
lib/pdfg-ir/scripts/tools/: csvfile.py  files.py  json.py  strings.py  system.py  xml.py
lib/pdfg-ir/src/: .main.cpp.swp  main.cpp
lib/pdfg-ir/src/common/: Benchmark.h  CUDA_util.h  Configuration.cpp  Measurements.cpp
lib/pdfg-ir/src/isl/: IntSetLib.hpp
lib/pdfg-ir/src/omega/: OmegaLib.hpp
lib/pdfg-ir/src/pdfg/: Codegen.hpp
lib/pdfg-ir/src/poly/: PolyLib.hpp
lib/pdfg-ir/src/util/: CPU.hpp  LIKWID.hpp  Lists.hpp  Logger.hpp  MatrixIO.hpp  OS.hpp  PAPI.hpp  Profiler.hpp  Strings.hpp  mmio.c  mmio.h
lib/pdfg-ir/src/util/common/: Benchmark.cpp  CUDA_util.cpp  Configuration.h  Measurements.h  iegen_util.h
lib/pdfg-ir/src/util/iegenlib/: IEGenLib.hpp
lib/pdfg-ir/src/util/pdfg/: FlowGraph.hpp  GraphIL.hpp  InspGen.hpp  IterGraph.hpp  Visitor.hpp
lib/pdfg-ir/src/util/solve/: Z3Lib.hpp
lib/pdfg-ir/test/: BenchmarkTest.hpp  ConjGradCOOTest.cpp  ConjGradCSRTest.cpp  ConjGradTest.hpp  InspExecTest.hpp  TensorDecompTest.cpp  driver.cpp  eDSLTest.cpp
src/: .gitignore  FunctionDeclVisitor.hpp  PDFGConsumer.hpp  PDFGFrontEndAction.hpp  PDFGPragmaHandler.hpp  Scop.cpp  Scop.hpp  ScopDetectionVisitor.hpp  ScopValidationVisitor.hpp  driver.cpp
test/: argument_fp.c  compile_commands.json  csr_compwise_matrix_prod.c  double_fp.c  factory_fp.c  modified_fp.c  sample.c  sample2.c  simple_fp.c
